add font-awesome and login button

--- a/src/globalStyles/index.styl
+++ b/src/globalStyles/index.styl
@@ -1,3 +1,4 @@
+@import "../../node_modules/font-awesome/css/font-awesome.min.css"
 @import "_variables.styl";
 @import "_mixins.styl";
 @import "_common.styl";
