--- a/src/containers/OrderForm/steps/Intro/style.styl
+++ b/src/containers/OrderForm/steps/Intro/style.styl
@@ -2,10 +2,16 @@
   height 100%;
   background: url("../../../../assets/img/menu.gif") center no-repeat;
   background-size: cover;
-  overflow auto;
+  overflow hidden;
 
   padding-top 46px;
   position relative;
+
+  .intro-step-inner {
+    height: 100%;
+    padding-bottom: 40px;
+    overflow: scroll;
+  }
 
   .install-app {
     position: absolute;
