add animation step

--- a/src/components/FlipPanel/style.styl
+++ b/src/components/FlipPanel/style.styl
@@ -21,12 +21,12 @@
       top 0;
     }
     &.slide-up-exit.slide-up-exit-active {
-      top -30px;
+      top -100%;
       transition: top 300ms ease;
     }
 
     &.slide-down-enter {
-      top -30px;
+      top -100%;
     }
     &.slide-down-enter.slide-down-enter-active {
       top 0;
