render menu item

--- a/src/containers/OrderForm/steps/SelectItem/style.styl
+++ b/src/containers/OrderForm/steps/SelectItem/style.styl
@@ -4,6 +4,11 @@
   background-size: cover;
   overflow auto;
 
+  .items-step-inner {
+    height: 100%;
+    padding-bottom: 40px;
+  }
+
   .group-title {
     font-size: 20px;
     color: #ff792c;
